# DLproject

./: .gitignore  README.md  pyproject.toml  run_me.py
data/: cmma.csv  cmma_regimes.csv
models/rl/SAC/: best_sac_model.pt
models/rl/dqn/: dqn_best.pt  dqn_episode_1.pt  dqn_episode_10.pt  dqn_episode_3.pt  dqn_episode_5.pt  dqn_episode_9.pt  dqn_final.pt
models/rl/ppo/ppo_20250315_232105/: ppo_episode_14.pt  ppo_episode_2.pt  ppo_episode_21.pt  ppo_episode_3.pt
models/rl/ppo/ppo_20250315_232423/: ppo_episode_1.pt  ppo_episode_10.pt  (+2 more)
old/: repomix-output.txt
reports/metalabel/: triple_barrier_metalabeling_report.md
reports/regimes/: regime_analysis_report.md
reports/rl/PPO/: model_comparison_results.csv  ppo_analysis_report.md  training_metrics.csv
reports/rl/SAC/: eval_episode_10.json  eval_episode_5.json  final_evaluation.json  strategy_comparison.csv  training_metrics.json
reports/rl/dqn/: dqn_backtest_results.csv  model_comparison_metrics.csv  strategy_comparison.csv
src/: __init__.py  drl.py
src/RL/: __init__.py  rl_manager.py
src/RL/DQN/: README.md  __init__.py  dqn_model.py  run_dqn_backtest.py  trading_env.py  train_dqn.py
src/RL/PPO/: README.md  __init__.py  ppo_model.py  run_ppo_backtest.py  trading_env.py  train_ppo.py
src/RL/SAC/: README.md  __init__.py  run_sac_backtest.py  sac_model.py  trading_env.py  train_sac.py  utils.py
src/metalabel/: __init__.py  run_metalabeling.py  triple_barrier.py
src/regimes/: __init__.py  compare_regime_performance.py  market_regime_detector.py  regime_performance_analysis.py  run_detector.py
