[tool.poetry]
name = "dlproject"
version = "0.1.0"
description = "Deep Reinforcement Learning for Trading with Market Regimes"
authors = ["Ali H. Askar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
seaborn = "^0.13.1"
torch = "^2.1.2"
tabulate = "^0.9.0"
joblib = "^1.3.2"
tqdm = "^4.66.1"
hmmlearn = "^0.3.0"
ta = "^0.11.0"
gym = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
